# ecs-game-engine-practice

./: CMakeLists.txt  README.md  main.cpp
include/: Vec2.hpp  components.hpp  entity.hpp
src/: main.cpp
tests/: Vec2_test.cpp  entity_test.cpp
